@@ -1,6 +1,9 @@
 Version 1.4 (2011-XX-XX)
 ------------------------------------------------------------------------------
 
+* `count` now takes an additional parameter `wt_var` which allows you to
+  compute weighted sums. This is as fast, or faster than, `tapply` or `xtabs`.
+
 Version 1.3.1 (2010-12-30)
 ------------------------------------------------------------------------------
 
